hphp/hack/test/typecheck/case_type/case_type_equality_check.php.exp
File "case_type_equality_check.php", line 9, characters 12-20:
This expression is always `false` (Typing[4118])
  File "case_type_equality_check.php", line 8, characters 12-16:
  This is a value of type MyInt
  File "case_type_equality_check.php", line 4, characters 11-15:
  Typedef definition comes from here
  File "case_type_equality_check.php", line 8, characters 22-27:
  This is a value of type MyBool
  File "case_type_equality_check.php", line 6, characters 11-16:
  Typedef definition comes from here
