hphp/hack/test/typecheck/case_type/case_type_equality_check.php
<?hh
<<file:__EnableUnstableFeatures('case_types')>>

case type MyInt = int;

case type MyBool = bool;

function f(MyInt $x, MyBool $y): bool {
    return $x === $y;
}
